--- a/static/css/responsev.css
+++ b/static/css/responsev.css
@@ -34,8 +34,9 @@
         background-color: transparent;
     }
     #button_search{
-        height: 30px;
-        width: 50px;
+        height: 38px;
+        width: 40px;
+        margin-top: -10px;
     }
  }
 
@@ -63,6 +64,9 @@
         width: 100%;
         height: auto;
         margin-left: 0px;
+    }
+    .sidebar{
+        min-height: 225vh;
     }
  
 }
