--- a/static/css/style.css
+++ b/static/css/style.css
@@ -30,7 +30,7 @@ button {
 .sidebar_part{
     width: 150px;
     height: 100vh;
-    background-color: rgba(128, 128, 128, 0.116);
+    
     display: flex;
     justify-content: center;
    
@@ -168,14 +168,17 @@ body.open .sidebar button > span {
     width: 140px;
     border: none;
     border-radius: 50px;
+    background-color: transparent;
 }
 #button_search{
     border: none;
     border-radius: 50px;
+    background-color: transparent;
     
 }
+
 #button_search:hover{
-    background-color: white;
+    background-color: transparent;
     
 
 }
@@ -249,19 +252,34 @@ body.open .sidebar button > span {
     
 
 }
+#heading{
+    float: right;
+    color: #0d6efd;
+
+}
+#heading img{
+    margin-left: 2px;
+    margin-top: -2px;
+  width: 13px;
+  filter: invert(50%) sepia(70%) saturate(7500%) hue-rotate(209deg) brightness(100%) contrast(99%);  
+
+}
 #image-card{
    
-    width: 100%;
-    height: 12vh;
+    width: 90%;
+    height: 8vh;
+    float: right;
 
 }
 .second_part p1{
     float: right;
-   margin-top: 17%;
+   margin-top: 1%;
     font-size: 12px;
     
 }
-
+.profit{
+    margin-right: 7px;
+}
 
 /* ###cards2### */
 .card-part-2{
@@ -314,9 +332,45 @@ body.open .sidebar button > span {
         width: 100%;
         height: 20vh;
 }
+#Transactions{
+    display: flex;
 
+    
+}#Transactions h5{
+   
+font-size: 16px;
+    
+}
+#card-head{
+    font-weight: bold;
+    
+}
+#drop-down{
+    width: 20px;
+    height: 20px;
+    float: right;
+    filter: invert(50%) sepia(70%) saturate(7500%) hue-rotate(209deg) brightness(100%) contrast(99%);  
+    
+}
+#revanue-0{
+    width: 80%;
+    
+}#revanue-9{
+    width: 60%;
+    
+}
+#revanue-4{
+    float: right;
+    color: #0d6efd;
 
-
+}
+#revanue-4 img{
+    filter: invert(50%) sepia(70%) saturate(7500%) hue-rotate(209deg) brightness(100%) contrast(99%);  
+}
+#revanue-8{
+    width: 60%;
+    
+}
 
 
 
@@ -363,6 +417,17 @@ body.open .sidebar button > span {
     border-radius: 30px;
     height: 40px;
 }
+#button-notification img{
+    margin-top: -15px;
+}
+#notifivation-2{
+    background-color: red;
+    color: #fff;
+    border-radius: 50px;
+    margin: -50px 20px;
+    width: 20px;
+    height: 20px;
+}
 
 
 .right-side-profile{
@@ -397,8 +462,7 @@ body.open .sidebar button > span {
 
 }
 #profile-pic{
-    width: 70%;
-    height: 100px;
+    width: 40%;
     border-radius: 70px;
     
 }
@@ -424,10 +488,22 @@ body.open .sidebar button > span {
 #adding{
     text-align: center;
     font-size: 17px;
-    height: 10px;
+    height: 12px;
 }
 #lastgraf{
     width: 100%;
     height: 20vh;
 }
+.progress{
+    height: 9px;
+}
+#progres-over{
+    margin-top: 10px;
+
+
+}
+
+
+
+
 
